# LarkAgentBot

./: .env.example  .gitignore  .gitmessage  AGENTS.md  README.md  TODO.md  config.yaml  pyproject.toml
.trellis/: .template-hashes.json  config.yaml
.trellis/spec/backend/: agent-skills-standard.md  directory-structure.md  index.md  quality-guidelines.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/06-27-lark-agent-bot/: design.md  implement.md  prd.md  task.json
.trellis/tasks/06-27-lark-agent-bot/research/: builtin-tools-comparison.md
.trellis/tasks/07-04-lark-agent-bot-core/: design.md  prd.md  task.json
.trellis/tasks/07-04-lark-agent-bot-skills/: task.json
.trellis/tasks/07-05-auto-fetch-lark-bot-id/: task.json
.trellis/tasks/07-05-card-streaming/: task.json
.trellis/tasks/07-05-feishu-content-normalization/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-05-fix-topic-creation-p2p-persistence/: design.md  task.json
.trellis/tasks/07-05-lark-agent-bot-feishu-websocket/: implement.md  task.json
.trellis/tasks/07-05-lark-agent-bot-mcp/: design.md  implement.md  task.json
.trellis/tasks/07-05-lark-agent-module-structure/: prd.md  task.json
.trellis/tasks/07-05-management-commands/: task.json
.trellis/tasks/07-05-pydantic-settings-config/: design.md  prd.md  task.json
.trellis/tasks/07-05-pydantic-settings-config/research/: settings-practices.md
.trellis/tasks/07-05-python-313-latest-dependencies/: task.json
.trellis/tasks/07-05-runtime-data-git-hygiene/: prd.md  task.json
.trellis/workspace/me/: index.md  journal-1.md
data/defaults/: AGENTS.md
docs/: architecture.md
src/lark_agent/: __init__.py  agents_conf.py  app.py  commands.py  config.py  conversation.py  images.py  llm_client.py  main.py  mcp_manager.py  project.py  router.py  skills.py  tools.py
src/lark_agent/mcp/: __init__.py  config.py  manager.py  naming.py  result.py  session.py
src/lark_agent/transport/: __init__.py  base.py  websocket.py
src/lark_agent/transport/lark/: __init__.py  adapter.py  bot_info.py  card_streamer.py  dedupe.py  (+4 more)
tests/: test_agents_conf.py  test_app.py  test_card_streamer.py  test_config.py  test_conversation.py  test_lark_bot_info.py  test_lark_websocket.py  test_mcp_manager.py  test_router.py  test_skills.py
(+48 files in other folders)
