[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "lark-agent"
version = "0.1.0"
description = "Lark chat bot core for project-scoped AI conversations"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.4.0",
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
