[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "lark-agent"
version = "0.1.0"
description = "Lark chat bot core for project-scoped AI conversations"
requires-python = ">=3.13"
dependencies = [
    "lark-oapi>=1.7.0",
    "mcp>=1.28.1",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[project.scripts]
lark-agent = "lark_agent.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    # Chinese punctuation appears in user-facing text and Feishu/Lark content tests.
    "RUF001",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
